# bq-fake-data-generator

./: Makefile  README.md  pyproject.toml
bqfdgn/: __init__.py  core.py  utils.py
dataconfig/: fake_config.json
